# CAD_meta_prediction

./: .gitignore  .ruff.toml  Dockerfile  LICENSE  Makefile  README.md  Tutorial Notebook.ipynb  Tutorial_Notebook.ipynb  estimator.py  hyperparams.py  meta_prediction_estimator.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ruff.yml
data/: make_cardio_train_pickle.ipynb  make_cardio_train_pickle.py  typed_cardio_train.pkl
expected_output/: shap__xgb_classifier__cardio__preselect.tsv
src/: hyperparams.py  utils.py
